feat: add utility classes for pagination, security, web cookies, text processing, and file validation.